src/manifests/kustomize/base/virtual-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtual-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtual-worker
  template:
    metadata:
      labels:
        app: virtual-worker
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: virtual-worker
        image: ghcr.io/pauldotyu/aks-store-demo/virtual-worker:1.5.0
        resources:
          requests:
            cpu: 1m
            memory: 1Mi
          limits:
            cpu: 1m
            memory: 5Mi
